RESOLVED FIXED118210
PageThrottler::shouldThrottleTimers is wrong.
https://bugs.webkit.org/show_bug.cgi?id=118210
Summary PageThrottler::shouldThrottleTimers is wrong.
Gavin Barraclough
Reported 2013-06-28 18:20:53 PDT
m_throttleState == PageNotThrottledState -> page NOT throttled, so should NOT throttle timers m_throttleState != PageNotThrottledState -> page NOT NOT throttled, so should throttle timers This needs cleaning up, but for now, 1 character fix.
Attachments
Fix (1.58 KB, patch)
2013-06-28 18:31 PDT, Gavin Barraclough
andersca: review+
Gavin Barraclough
Comment 1 2013-06-28 18:31:59 PDT
Gavin Barraclough
Comment 2 2013-06-28 18:45:50 PDT
Committed revision 152202.
Andreas Kling
Comment 3 2013-06-28 22:56:04 PDT
Note You need to log in before you can comment on or make changes to this bug.