PageThrottler::shouldThrottleTimers is wrong. https://bugs.webkit.org/show_bug.cgi?id=118210

Reviewed by Anders Carlson.

m_throttleState == PageNotThrottledState
    -> page NOT throttled, so should NOT throttle timers
m_throttleState != PageNotThrottledState
    -> page NOT NOT throttled, so should throttle timers

This needs cleaning up, but for now, 1 character fix.

* page/PageThrottler.h:
(WebCore::PageThrottler::shouldThrottleTimers):
    == -> !=



Canonical link: https://commits.webkit.org/136255@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152202 268f45cc-cd09-0410-ab3c-d52691b4dbfc